--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 				document.getElementById("conv_btn").appendChild(aTag);
 
 				// start the download automatically
-				aTag.click();
+				//aTag.click();
 			}
 		};
 
 	</script>
 </body>
 </html>
+
