--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script type="module">
 		window.onload = async () => {
 
-			let cvrt = await import('./src/Csv2Xlsx.js');
+			let cvrt = await import('https://vcorteseuoc.github.io/CSVConverter/src/Csv2Xlsx.js');
 
 			// Meta-Data of the xlsx
 			const metaData = {
@@ -67,4 +67,5 @@
 	</script>
 </body>
 </html>
+
 
