--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<label for="name" class="form-label">Nombre archivo exportado:</label>
 		<input required type="text" class="form-control" id="name" placeholder="Introduce nombre de archivo a exportar" name="name">
 	  </div>
-	  <button type="submit" class="btn btn-primary" id="conv_btn">Convertir</button>
+	  <button type="submit" onclick="alert('Button clicked!')" class="btn btn-primary" id="conv_btn">Convertir</button>
 	</form>
   </div>
 </div>
@@ -67,6 +67,7 @@
 	</script>
 </body>
 </html>
+
 
 
 
